Removed Reddit from Signup and login, prevented resizing of login and signup dialogs on mobile

--- a/src/main/webapp/assets/sass/pages/_confirmGameSignupDialog.scss
+++ b/src/main/webapp/assets/sass/pages/_confirmGameSignupDialog.scss
@@ -10,7 +10,12 @@
       color: red;
     }
   }
-
+    
+  .warning {
+    padding: 10px 10px;
+    color: red;
+  }
+    
   .dialog-container__header {
     text-align: center;
     font-size: 22px;
